static/main.css
.body-layout {
  margin: 0;
  background-color: #f0f0f0;
  height: 100%;
  overflow-y: auto;
  overflow-x: hidden;
}

.layout {
  width: 100vw;
  height: 100vh;
  display: grid;
  grid-template-columns: 200px auto;
  grid-template-rows: 60px auto;
  grid-template-areas:
    "logo header"
    "sidebar content";
  font-family: 'Nunito Sans', sans-serif;
}

.header-layout {
  grid-area: 1/1/1/3;
  background-color: #fecb2f;
  margin: 0;
  padding: 0;
  overflow: hidden;
  z-index: 20;
  position: relative;
  box-shadow: 0 5px 4px -2px gray;
}

.logo-layout {
  grid-area: logo;
}

.logo-layout img {
  width: 100%;
  height: 100%;
  justify-self: center;
  object-fit: cover;
  z-index: 30;
  position: relative;
}

.sidebar-layout {
  grid-area: sidebar;
  background-color: #4d5762;
  color: #ffffff;
  margin: 0;
  padding: 0;
  width: 200px;
  height: 100%;
  font-size: 1em;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  padding-top: 20px;
}

.sidebar-item.active {
  background-color: #fecb2f;
  color: #3a3a3a;
  font-weight: 800;
  box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.75);
  filter: none;
}

.sidebar-item {
  display: flex;
  color: white;
  padding: 1em 1em;
  text-decoration: none;
  /* border-top: 0.5px solid white;
  border-bottom: 0.5px solid white; */
  font-size: 1em;
  font-weight: 400;
  align-items: center;
  margin-bottom: 7px;
}

.sidebar-item.active>img {
  filter: none;
}

.sidebar-item>img {
  height: 2em;
  padding-right: 0.5em;
  filter: grayscale(100%);
}

.sidebar-item:hover {
  background-color: #fecb2f;
  color: #3a3a3a;
  font-weight: 800;
  box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.75);
  transition: all ease-in-out 250ms;
}

.sidebar-item:hover>img {
  filter: none;
}

.noHover {
  pointer-events: none;
}

.content-layout {
  grid-area: content;
  padding: 1.5rem 2rem;
}

.horizontal {
  display: block;
  color: black;
  text-align: right;
  padding: 14px 16px;
  text-decoration: none;
}

li.vertical {
  display: block;
  color: white;
  padding: 30px 25px;
  text-decoration: none;
  text-align: left;
}

li a:hover {
  background-color: #555;
  color: white;
}

li a:active {
  background-color: #555;
  color: white;
}

.active {
  background-color: #fecb2f;
}

/*BI CSS*/
.button {
  display: inline-block;
  border-radius: 4px;
  background-color: #4CAF50;
  border: none;
  color: white;
  text-align: center;
  font-size: 16px;
  padding: 6px;
  width: 260px;
  transition: all 0.5s;
  cursor: pointer;
  margin: 5px;
}
.button span {
  cursor: pointer;
  display: inline-block;
  position: relative;
  transition: 0.5s;
}

.button span:after {
  content: '\00bb';
  position: absolute;
  opacity: 0;
  top: 0;
  right: -20px;
  transition: 0.5s;
}

.button:hover span {
  padding-right: 25px;
}

.button:hover span:after {
  opacity: 1;
  right: 0;
}

.cardview {
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
  background-color: white;
  transition: 0.3s;
  width: 100%;
  height: 190px;      
}

.containerview {
  padding: 10px 16px;
  margin: auto;   
  text-align: left;  
}

.cardcombine {
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
  background-color: white;
  transition: 0.3s;
  width: 100%;
  height: 190px;      
}

.containercombine {
  padding: 10px 16px;
  margin: auto;   
  text-align: left;  
}

.cardtable {
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
  background-color: white;
  transition: 0.3s;
  width: 1170px;
  height: 190px;      
  max-width: 100%;
  height: 100%;
}

.containertable {
  padding: 10px 16px;
  margin: auto;   
  text-align: center;
  align-content: center;  
  max-width: 100%;  
}

div.cardtitle {
  font-size: 26px;
  font-weight: bold;
  color: #4d5762;
}

div.cardsubtitle{
  font-size: 15px;
  font-style: italic;
}

table.outputtable{
  border-collapse: collapse;
}

table.outputtable th{
  background-color: #4CAF50;
  color: white;  
  padding: 5px;
}

table.outputtable tr:nth-child(even){background-color: white}
table.outputtable tr:nth-child(odd){background-color: #fdfcfb}
table.outputtable tr:hover {background-color:#f5f5f5;}

.tooltip {
  position: relative;
}

.tooltip .tooltiptext {
  visibility: hidden;
  width: 120px;
  background-color: #4d5762;
  color: #fff;
  text-align: center;
  border-radius: 6px;
  padding: 5px 0;
  
  /* Position the tooltip */
  position: absolute;
  z-index: 1;
  top: 100%;
  left: 50%;
  margin-left: -60px;
}

.tooltip:hover .tooltiptext {
  visibility: visible;
}

